--- a/.gitignore
+++ b/.gitignore
@@ -64,9 +64,53 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
-# Packed Addressables
-/[Aa]ssets/[Aa]ddressable[Aa]ssets[Dd]ata/*/*.bin*
-
-# Temporary auto-generated Android Assets
-/[Aa]ssets/[Ss]treamingAssets/aa.meta
-/[Aa]ssets/[Ss]treamingAssets/aa/*
+# Rodrigo - Unity Assets
+# Assets folder
+/[Aa]ssets/
+# 3D models
+*.3dm
+*.3ds
+*.blend
+*.c4d
+*.collada
+*.dae
+*.dxf
+*.fbx
+*.jas
+*.lws
+*.lxo
+*.ma
+*.max
+*.mb
+*.obj
+*.ply
+*.skp
+*.stl
+*.ztl
+# Audio
+*.aif
+*.aiff
+*.it
+*.mod
+*.mp3
+*.ogg
+*.s3m
+*.wav
+*.xm
+# Fonts
+*.otf
+*.ttf
+# Images
+*.bmp
+*.exr
+*.gif
+*.hdr
+*.iff
+*.jpeg
+*.jpg
+*.pict
+*.png
+*.psd
+*.tga
+*.tif
+*.tiff
